syntax = "proto3";

package job;

import "internal/handler/jobhdl/protos/job_request.proto";
import "internal/handler/jobhdl/protos/job_response.proto";

option go_package = "github.com/svaloumas/valet/internal/handler/jobhdl/protobuf;pb";


// Interface exported by the service.
service Job {
    rpc Create(CreateJobRequest) returns (CreateJobResponse) {}
    rpc Get(GetJobRequest) returns (GetJobResponse) {}
    rpc GetJobs(GetJobsRequest) returns (GetJobsResponse) {}
    rpc Update(UpdateJobRequest) returns (UpdateJobResponse) {}
    rpc Delete(DeleteJobRequest) returns (DeleteJobResponse) {}
}
